--- a/myapp/templates/films.html
+++ b/myapp/templates/films.html
@@ -7,5 +7,8 @@
     {% for film in films %}
         <li>{{ film }}</li>
     {% endfor %}
+    <form action="{% url 'home' %}" method="get">
+        <button type="submit">Go to Home</button>
+    </form>
 </ul>
 {% endblock %}
