--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}MovieAI{% endblock %}</title>
     <script src="{% static "lookup.js" %}" defer></script>
+    <link rel="stylesheet" href="{% static 'header.css' %}">
     {% block extra_head %}{% endblock %}
 </head>
 <body>
