homecss start and model.py changed

--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -3,6 +3,7 @@
 {% load static %}
 {% block extra_js %}
     <script src="{% static "lookup.js" %}" defer></script>
+    <link rel="stylesheet" href="{% static 'home.css' %}">
 {% endblock %}
 {% block content %}
 <br>
