--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -7,15 +7,17 @@
 {% endblock %}
 {% block content %}
 <br>
-    <form action="/films" method="post">
-        {% csrf_token %}
-        <input list="movies" id="movie-search" name="movie" placeholder="Start typing a movie name..." required>
-        <datalist id="movies">
-            
-        </datalist>
-        <br></br>
-        <input type="number" step="1" oninput="this.value = this.value.replace(/[^0-9]/g, '');" name='numb' placeholder="how many recommendations" required>
-        <br></br>
-        <button>Submit</button>
-    </form>
+    <div class="container">
+        <form action="/films" method="post">
+            {% csrf_token %}
+            <input list="movies" id="movie-search" name="movie" placeholder="Start typing a movie name..." required>
+            <datalist id="movies">
+                
+            </datalist>
+            <br></br>
+            <input type="number" step="1" oninput="this.value = this.value.replace(/[^0-9]/g, '');" name='numb' placeholder="how many recommendations" required>
+            <br></br>
+            <button>Submit</button>
+        </form>
+    <div>
 {% endblock %}
