--- a/myapp/templates/films.html
+++ b/myapp/templates/films.html
@@ -3,14 +3,19 @@
 {% block content %}
 <h1 class="text-4xl font-sans text-center py-6 bg-cyan-200">Recommendations</h1>
 
-<div class="border-4 border-black-500 m-8 flex justify-center grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 p-4">
+<div class="border-4 border-black-500 m-8 grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-4 justify-center">
     {% for film in films %}
-        <div class="bg-white rounded-lg shadow-md p-4 hover:shadow-lg transition-shadow">
-            <p class="text-lg font-medium text-gray-800 flex justify-left mb-4 ml-4 mr-4">{{ film.0 }}</p>
-            <p class="text-lg font-medium text-gray-800 flex justify-left mb-4 ml-4 mr-4">Genres: {{ film.1 }}</p>
-            <p class="text-lg font-medium text-gray-800 flex justify-left mb-4 ml-4 mr-4">Director: {{ film.2 }}</p>
-            <p class="text-lg font-medium text-gray-800 flex justify-left mb-4 ml-4 mr-4">Cast: {{ film.3 }}</p>
-            <p class="text-lg font-medium text-gray-800 flex justify-left mb-4 ml-4 mr-4">Overview: {{ film.4 }}</p>
+        <div class="bg-white rounded-lg shadow-md p-4 hover:shadow-lg transition-shadow grid grid-cols-2 w-full max-w-3xl mx-auto">
+            <div class="w-full">
+                <img src="{{ film.5 }}" alt="Poster for {{ film.0 }}" class="w-full h-[32rem] object-contain rounded-lg mb-4">
+            </div>
+            <div class="w-full">
+                <p class="text-lg font-medium text-gray-800 flex justify-left mb-4 ml-4 mr-4">{{ film.0 }}</p>
+                <p class="text-lg font-medium text-gray-800 flex justify-left mb-4 ml-4 mr-4">Genres: {{ film.1 }}</p>
+                <p class="text-lg font-medium text-gray-800 flex justify-left mb-4 ml-4 mr-4">Director: {{ film.2 }}</p>
+                <p class="text-lg font-medium text-gray-800 flex justify-left mb-4 ml-4 mr-4">Cast: {{ film.3 }}</p> 
+                <p class="text-lg font-medium text-gray-800 flex justify-left mb-4 ml-4 mr-4">Overview: {{ film.4 }}</p>
+            </div>
         </div>
     {% endfor %}
 </div>
