--- a/myapp/templates/films.html
+++ b/myapp/templates/films.html
@@ -5,7 +5,7 @@
 
 <div class="border-4 border-black-500 m-8 grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-4 justify-center">
     {% for film in films %}
-        <div class="bg-white rounded-lg shadow-md p-4 hover:shadow-lg transition-shadow grid sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2  w-full max-w-3xl mx-auto">
+        <div class="bg-white rounded-lg shadow-md p-4 hover:shadow-lg transition-shadow grid grid-cols-1 lg:grid-cols-2  w-full max-w-3xl mx-auto">
             <div class="w-full">
                 <img src="{{ film.5 }}" alt="Poster for {{ film.0 }}" class="w-full h-[32rem] object-contain rounded-lg mb-4">
             </div>
