--- a/myapp/templates/films.html
+++ b/myapp/templates/films.html
@@ -3,10 +3,12 @@
 {% block content %}
 <h1 class="text-4xl font-sans text-center py-6 bg-cyan-200">Recommendations</h1>
 
-<div class="border-4 border-black-500 m-8 grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-4 justify-center">
+<div class="border-4 border-black-500 m-8 grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 gap-4 p-4 justify-center">
     {% for film in films %}
-        <div class="bg-white rounded-lg shadow-md p-4 hover:shadow-lg transition-shadow grid grid-cols-1 lg:grid-cols-2  w-full max-w-3xl mx-auto">
-            
+        <div class="bg-white rounded-lg shadow-md p-4 hover:shadow-lg transition-shadow grid grid-cols-1 xl:grid-cols-2  w-full max-w-3xl mx-auto">
+            <div class="flex justify-center items-center w-full">
+                <img src="{{ film.5 }}" alt="{{ film.0 }} Poster" class="w-96 h-128 object-contain shadow-md">
+            </div>
             <div class="w-full">
                 <p class="text-lg font-medium text-gray-800 flex justify-left mb-4 ml-4 mr-4">{{ film.0 }}</p>
                 <p class="text-lg font-medium text-gray-800 flex justify-left mb-4 ml-4 mr-4">Genres: {{ film.1 }}</p>
