--- a/myapp/templates/register.html
+++ b/myapp/templates/register.html
@@ -3,4 +3,29 @@
 {% block content %}
 <h1 class="text-4xl font-sans text-center py-6 bg-cyan-200">Register</h1>
 
+<div class="flex justify-center items-center h-screen">
+    <form method = "POST" autocomplete="off" class="w-full max-w-xs">
+        {% csrf_token %}
+        <div class="mb-4">
+            <label for="id_username" class="block text-gray-700 text-sm font-bold mb-2 ">Username</label>
+            {{ registerform.username }}
+        </div>
+        <div class="mb-4">
+            <label for="id_email" class="block text-gray-700 text-sm font-bold mb-2">Email</label>
+            {{ registerform.email }}
+        </div>
+        <div class="mb-4">
+            <label for="id_password1" class="block text-gray-700 text-sm font-bold mb-2">Password</label>
+            {{ registerform.password1 }}
+        </div>
+        <div class="mb-6">
+            <label for="id_password2" class="block text-gray-700 text-sm font-bold mb-2">Confirm Password</label>
+            {{ registerform.password2 }}
+        </div>
+        <div class="flex justify-center">
+            <input type="submit" value="Register" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"/>
+        </div>
+    </form>
+</div>
+
 {% endblock %}
