--- a/myapp/templates/my-login.html
+++ b/myapp/templates/my-login.html
@@ -6,13 +6,26 @@
 <div class="flex justify-center items-center h-screen">
     <form method = "POST" autocomplete="off" class="w-full max-w-xs">
         {% csrf_token %}
+        {% if loginform.non_field_errors %}
+            <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mb-4" role="alert">
+                {% for error in loginform.non_field_errors %}
+                    <span class="block sm:inline">{{ error }}</span>
+                {% endfor %}
+            </div>
+        {% endif %}
         <div class="mb-4">
             <label for="id_username" class="block text-gray-700 text-sm font-bold mb-2 text-center">Username:</label>
             {{ loginform.username }}
+            {% for error in loginform.username.errors %}
+                <p class="text-red-500 text-xs italic">{{ error }}</p>
+            {% endfor %}
         </div>
         <div class="mb-6">
             <label for="id_password" class="block text-gray-700 text-sm font-bold mb-2 text-center">Password:</label>
             {{ loginform.password }}
+            {% for error in loginform.password.errors %}
+                <p class="text-red-500 text-xs italic">{{ error }}</p>
+            {% endfor %}
         </div>
         <div class="flex justify-center">
             <input type="submit" value="Login" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"/>
