--- a/myapp/templates/register.html
+++ b/myapp/templates/register.html
@@ -6,21 +6,40 @@
 <div class="flex justify-center items-center h-screen">
     <form method = "POST" autocomplete="off" class="w-full max-w-xs">
         {% csrf_token %}
+        {% if registerform.non_field_errors %}
+            <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mb-4" role="alert">
+                {% for error in registerform.non_field_errors %}
+                    <span class="block sm:inline">{{ error }}</span>
+                {% endfor %}
+            </div>
+        {% endif %}
         <div class="mb-4">
             <label for="id_username" class="block text-gray-700 text-sm font-bold mb-2 ">Username</label>
             {{ registerform.username }}
+            {% for error in registerform.username.errors %}
+                <p class="text-red-500 text-xs italic">{{ error }}</p>
+            {% endfor %}
         </div>
         <div class="mb-4">
             <label for="id_email" class="block text-gray-700 text-sm font-bold mb-2">Email</label>
             {{ registerform.email }}
+            {% for error in registerform.email.errors %}
+                <p class="text-red-500 text-xs italic">{{ error }}</p>
+            {% endfor %}
         </div>
         <div class="mb-4">
             <label for="id_password1" class="block text-gray-700 text-sm font-bold mb-2">Password</label>
             {{ registerform.password1 }}
+            {% for error in registerform.password1.errors %}
+                <p class="text-red-500 text-xs italic">{{ error }}</p>
+            {% endfor %}
         </div>
         <div class="mb-6">
             <label for="id_password2" class="block text-gray-700 text-sm font-bold mb-2">Confirm Password</label>
             {{ registerform.password2 }}
+            {% for error in registerform.password2.errors %}
+                <p class="text-red-500 text-xs italic">{{ error }}</p>
+            {% endfor %}
         </div>
         <div class="flex justify-center">
             <input type="submit" value="Register" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"/>
