--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -7,37 +7,37 @@
     <meta name="csrf-token" content="{{ csrf_token }}">
     <title>{% block title %}MovieAI{% endblock %}</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    
     <script src="{% static "lookup.js" %}" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aws-sdk/2.1691.0/aws-sdk.min.js"></script>
+    <link rel="stylesheet" href="{% static 'index.css' %}">
     {% block extra_head %}{% endblock %}
 </head>
-<body class="bg-cyan-200">
+<body>
     
     <div class="grid grid-cols-3">
         <!--User Auth Buttons-->
-        <div class = "grid grid-cols-1 xl:grid-cols-2 xl:w-44">
+        <div class = "grid grid-cols-1 xl:grid-cols-2">
             {% if user.is_authenticated %}
-                <form method="post" action="{% url 'user-logout' %}" class="p-6">
+                <form method="post" action="{% url 'watchlist' %}" class="p-6">
                     {% csrf_token %}
-                    <button type="Logout" class="bg-blue-900 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg ">WatchList</button>
+                    <button type="WatchList" class="font-bold py-2 px-4 rounded-lg btn-primary gradient-text text-2xl">WatchList</button>
                 </form>
                 <form method="post" action="{% url 'user-logout' %}" class="p-6">
                     {% csrf_token %}
-                    <button type="Logout" class="bg-blue-900 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg ">logout</button>
+                    <button type="Logout" class="font-bold py-2 px-4 rounded-lg btn-primary gradient-text text-2xl">Logout</button>
                 </form>
             {% else %}
                 <form method="post" action="{% url 'my-login' %}" class="p-6">
                     {% csrf_token %}
-                    <button type="Login" class="bg-blue-900 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg ">Login</button>
+                    <button type="Login" class="font-bold py-2 px-4 rounded-lg btn-primary gradient-text text-2xl">Login</button>
                 </form>
                 <form method="post" action="{% url 'register' %}" class="p-6">
                     {% csrf_token %}
-                    <button type="Register" class="bg-blue-900 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg ">Register</button>
+                    <button type="Register" class="font-bold py-2 px-4 rounded-lg btn-primary gradient-text text-2xl">Register</button>
                 </form>
             {% endif %}
         </div>
-        <h1 class="text-4xl font-sans text-center py-6 bg-cyan-200">Welcome to MovieAI</h1>
+        <h1 class="text-6xl font-sans text-center py-6 gradient-text">Welcome to MovieAI</h1>
     </div>
     {% block content %}{% endblock %}
     {% block extra_js %}{% endblock %}
