--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -5,6 +5,7 @@
 
 
 <div class="container mx-auto px-4 py-8">
+    
     <form action="/films" method="post" class="max-w-md mx-auto space-y-4">
         {% csrf_token %}
         <input list="movies" 
@@ -12,7 +13,7 @@
                name="movie" 
                placeholder="Start typing a movie name..." 
                required
-               class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-cyan-500">
+               class="w-full px-4 py-2 border [border-image:linear-gradient(45deg,#00c6ff,#0072ff)_1] rounded focus:outline-none focus:ring-2 btn-primary gradient-text">
         <datalist id="movies">
         </datalist>
         
@@ -22,10 +23,10 @@
                name='numb' 
                placeholder="how many recommendations" 
                required
-               class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-cyan-500">
-        
+               class="w-full px-4 py-2 border [border-image:linear-gradient(45deg,#00c6ff,#0072ff)_1] rounded focus:outline-none focus:ring-2 btn-primary gradient-text">
+
         <button type="submit" 
-                class="w-full bg-cyan-500 text-white py-2 px-4 rounded-lg hover:bg-cyan-600 transition-colors">
+                class="w-full py-2 px-4 rounded-lg transition-colors btn-primary gradient-text">
             Submit
         </button>
     </form>
