--- a/myapp/templates/my-login.html
+++ b/myapp/templates/my-login.html
@@ -1,34 +1,38 @@
 {% extends "base.html" %} {% block title %} MovieAI {% endblock %}
 
 {% block content %}
-<h1 class="text-4xl font-sans text-center py-6 bg-cyan-200">Login</h1>
+<h1 class="text-4xl font-sans text-center py-6 gradient-text">Login</h1>
 
-<div class="flex justify-center items-center h-screen">
+<div class="flex justify-center items-center">
     <form method = "POST" autocomplete="off" class="w-full max-w-xs">
         {% csrf_token %}
         {% if loginform.non_field_errors %}
-            <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mb-4" role="alert">
+            <div class="border border-red-400 text-red-700 px-4 py-3 rounded relative mb-4" role="alert">
                 {% for error in loginform.non_field_errors %}
-                    <span class="block sm:inline">{{ error }}</span>
+                    <span class="block sm:inline gradient-text">{{ error }}</span>
                 {% endfor %}
             </div>
         {% endif %}
         <div class="mb-4">
-            <label for="id_username" class="block text-gray-700 text-sm font-bold mb-2 text-center">Username:</label>
-            {{ loginform.username }}
+            <label for="id_username" class="block text-sm font-bold mb-2 gradient-text">Username:</label>
+            <div class="">
+                {{ loginform.username }}
+            </div>
             {% for error in loginform.username.errors %}
-                <p class="text-red-500 text-xs italic">{{ error }}</p>
+                <p class="text-xs italic gradient-text">{{ error }}</p>
             {% endfor %}
         </div>
         <div class="mb-6">
-            <label for="id_password" class="block text-gray-700 text-sm font-bold mb-2 text-center">Password:</label>
-            {{ loginform.password }}
+            <label for="id_password" class="block text-sm font-bold mb-2 gradient-text">Password:</label>
+            <div class="">
+                {{ loginform.password }}
+            </div>
             {% for error in loginform.password.errors %}
-                <p class="text-red-500 text-xs italic">{{ error }}</p>
+                <p class="text-xs italic gradient-text">{{ error }}</p>
             {% endfor %}
         </div>
         <div class="flex justify-center">
-            <input type="submit" value="Login" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"/>
+            <input type="submit" value="Login" class="border border-4 btn-primary [border-image:linear-gradient(45deg,#00c6ff,#0072ff)_1] font-bold py-2 px-4 gradient-text"/>
         </div>
     </form>
 </div>
