--- a/myapp/templates/register.html
+++ b/myapp/templates/register.html
@@ -1,48 +1,48 @@
 {% extends "base.html" %} {% block title %} MovieAI {% endblock %}
 
 {% block content %}
-<h1 class="text-4xl font-sans text-center py-6 bg-cyan-200">Register</h1>
+<h1 class="text-4xl font-sans text-center py-6 gradient-text">Register</h1>
 
-<div class="flex justify-center items-center h-screen">
+<div class="flex justify-center items-center">
     <form method = "POST" autocomplete="off" class="w-full max-w-xs">
         {% csrf_token %}
         {% if registerform.non_field_errors %}
-            <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mb-4" role="alert">
+            <div class="border border-red-400 text-red-700 px-4 py-3 rounded relative mb-4" role="alert">
                 {% for error in registerform.non_field_errors %}
                     <span class="block sm:inline">{{ error }}</span>
                 {% endfor %}
             </div>
         {% endif %}
         <div class="mb-4">
-            <label for="id_username" class="block text-gray-700 text-sm font-bold mb-2 ">Username</label>
+            <label for="id_username" class="block text-sm font-bold mb-2 gradient-text">Username</label>
             {{ registerform.username }}
             {% for error in registerform.username.errors %}
-                <p class="text-red-500 text-xs italic">{{ error }}</p>
+                <p class="text-xs italic gradient-text">{{ error }}</p>
             {% endfor %}
         </div>
         <div class="mb-4">
-            <label for="id_email" class="block text-gray-700 text-sm font-bold mb-2">Email</label>
+            <label for="id_email" class="block text-sm font-bold mb-2 gradient-text">Email</label>
             {{ registerform.email }}
             {% for error in registerform.email.errors %}
-                <p class="text-red-500 text-xs italic">{{ error }}</p>
+                <p class="text-xs italic gradient-text">{{ error }}</p>
             {% endfor %}
         </div>
         <div class="mb-4">
-            <label for="id_password1" class="block text-gray-700 text-sm font-bold mb-2">Password</label>
+            <label for="id_password1" class="block text-sm font-bold mb-2 gradient-text">Password</label>
             {{ registerform.password1 }}
             {% for error in registerform.password1.errors %}
-                <p class="text-red-500 text-xs italic">{{ error }}</p>
+                <p class="text-xs italic gradient-text">{{ error }}</p>
             {% endfor %}
         </div>
         <div class="mb-6">
-            <label for="id_password2" class="block text-gray-700 text-sm font-bold mb-2">Confirm Password</label>
+            <label for="id_password2" class="block text-sm font-bold mb-2 gradient-text">Confirm Password</label>
             {{ registerform.password2 }}
             {% for error in registerform.password2.errors %}
-                <p class="text-red-500 text-xs italic">{{ error }}</p>
+                <p class="text-xs italic gradient-text">{{ error }}</p>
             {% endfor %}
         </div>
         <div class="flex justify-center">
-            <input type="submit" value="Register" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"/>
+            <input type="submit" value="Register" class="border border-4 btn-primary [border-image:linear-gradient(45deg,#00c6ff,#0072ff)_1] font-bold py-2 px-4 gradient-text"/>
         </div>
     </form>
 </div>
