--- a/myapp/templates/films.html
+++ b/myapp/templates/films.html
@@ -48,6 +48,12 @@
                     
                         </form>
                     {% endif %}
+                {% else %}
+                    <form action="{% url 'my-login' %}" method="get">
+                        <button type="submit" class="w-full py-2 px-4 rounded-lg transition-colors btn-primary gradient-text">
+                            Login to Add films to your WatchList
+                        </button>
+                    </form>
                 {% endif %}
             </div>
         </div>
