--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -19,6 +19,7 @@
         
         <input type="number" 
                step="1" 
+               max="20"
                oninput="this.value = this.value.replace(/[^0-9]/g, '');" 
                name='numb' 
                placeholder="how many recommendations" 
